#237 Modernize codebase towards modern Java - applies several migration aids to modernize existing code towards Java 11 - fixes C-style array declarations - declares several fields as `final` where applicable - collapses / merges identical catch blocks - reduces use of deprecated API (mostly Hibernate) - reduces use of generic classes without type parameters - simplifies unnecessary String conversions - removes redundant initializers - removes unnecessary modifiers of methods declared in interfaces - removes unnecessary semicolons - removes unnecessary toString() invocations